Revert "fix instaspacing"
This reverts commit c050e1f518b34adf1fe1ea5910c8981df7f9fdea.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -961,9 +961,9 @@ color: #99CCFF!important;
 
 .aligncenter { 
   display: block; 
-  /*margin: 0 auto;
+  margin: 0 auto;
   max-width: 100%;
-  height: auto;*/ 
+  height: auto; 
   }
 
 .alignleft { float: left; }
